--- a/Jupyter_Notebook.ipynb
+++ b/Jupyter_Notebook.ipynb
@@ -2,7 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "df31ef57-3a91-484e-b05d-4e48a3d9d64c",
+   "metadata": {},
+   "source": [
+    "<center>\n",
+    "    <img src=\"https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/Logos/organization_logo/organization_logo.png\" width=\"300\" alt=\"cognitiveclass.ai logo\"  />\n",
+    "</center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### Add your code below following the instructions given in the course\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# My Jupyter Notebook on IBM Watson Studio"
@@ -10,7 +27,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b25dc9f-fc27-4672-bbc9-b00c38496a76",
    "metadata": {},
    "source": [
     "<br>**Dimitrios Papapostolou**\n",
@@ -19,7 +35,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c357da1-e764-42f2-8dd0-f1e856188c17",
    "metadata": {},
    "source": [
     "*I am interested in data science because as a curious individual I enjoy exploring data sets and driving key insights from them, in order help shape the strategy of the company I working at.*"
@@ -27,7 +42,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c7bc03f-df0c-470a-9fde-ac4c97355f57",
    "metadata": {},
    "source": [
     "### The following script will generate a random number between 0 and 100 and based on its outcome it will print different text (which will indicate the results)."
@@ -35,15 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "5a3467f6-12c9-4e21-b9c4-e9a277fc29fd",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "We got an x value of 78 (more than 50) so y value will be 2\n"
+      "We got an x value of 82 (more than 50) so y value will be 2\n"
      ]
     }
    ],
@@ -60,10 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0e32d2a-d10c-4c1b-9777-7aea04fb5561",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "+ Below you can find a sample table:\n",
     "\n",
@@ -115,5 +125,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
